# serializer version: 1
# name: test_SCUNet_color_25
  ImageModelDescriptor(
    architecture=SCUNetArch(
      id='SCUNet',
      name='SCUNet',
    ),
    input_channels=3,
    bytes=71784288,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=40, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
    tiling=<ModelTiling.DISCOURAGED: 2>,
  )
# ---
# name: test_SCUNet_color_GAN
  ImageModelDescriptor(
    architecture=SCUNetArch(
      id='SCUNet',
      name='SCUNet',
    ),
    input_channels=3,
    bytes=71784288,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=40, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
    tiling=<ModelTiling.DISCOURAGED: 2>,
  )
# ---
# name: test_SCUNet_color_RSNR
  ImageModelDescriptor(
    architecture=SCUNetArch(
      id='SCUNet',
      name='SCUNet',
    ),
    input_channels=3,
    bytes=71784288,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=40, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
    tiling=<ModelTiling.DISCOURAGED: 2>,
  )
# ---
# name: test_SCUNet_gray_25
  ImageModelDescriptor(
    architecture=SCUNetArch(
      id='SCUNet',
      name='SCUNet',
    ),
    input_channels=1,
    bytes=71775072,
    output_channels=1,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=40, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
    tiling=<ModelTiling.DISCOURAGED: 2>,
  )
# ---
